--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 18:00+0200\n"
+"PO-Revision-Date: 2011-08-08 18:01+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -10990,10 +10990,9 @@ msgid "Add primary key"
 msgstr "Pridėti pirminį raktą"
 
 #: tbl_structure.php:170 tbl_structure.php:171
-#, fuzzy
 #| msgid "Apply index(s)"
 msgid "Add index"
-msgstr "Keisti žurnalą(us) (indeksą)"
+msgstr "Pridėti indeksą"
 
 #: tbl_structure.php:172 tbl_structure.php:173
 msgid "Add unique index"
