--- a/po/lt.po
+++ b/po/lt.po
@@ -11005,7 +11005,7 @@ msgstr "Pridėti SPATIAL indeksą"
 
 #: tbl_structure.php:176 tbl_structure.php:177
 msgid "Add FULLTEXT index"
-msgstr ""
+msgstr "Pridėti FULLTEXT indeksą"
 
 #: tbl_structure.php:358
 #, fuzzy
