--- a/po/lt.po
+++ b/po/lt.po
@@ -11008,11 +11008,10 @@ msgid "Add FULLTEXT index"
 msgstr "Pridėti FULLTEXT indeksą"
 
 #: tbl_structure.php:358
-#, fuzzy
 #| msgid "None"
 msgctxt "None for default"
 msgid "None"
-msgstr "Nėra"
+msgstr "Jokio"
 
 #: tbl_structure.php:371
 #, php-format
