--- a/po/lt.po
+++ b/po/lt.po
@@ -11036,10 +11036,9 @@ msgid "Show more actions"
 msgstr "Rodyti daugiau veiksmų"
 
 #: tbl_structure.php:603
-#, fuzzy
 #| msgid "Print view"
 msgid "Edit view"
-msgstr "Spausdinti struktūrą"
+msgstr "Keisti rodinį"
 
 #: tbl_structure.php:620
 msgid "Relation view"
