--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-08 18:02+0200\n"
+"PO-Revision-Date: 2011-08-08 18:03+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -11049,10 +11049,9 @@ msgid "Propose table structure"
 msgstr "Analizuoti lentelės struktūrą"
 
 #: tbl_structure.php:645
-#, fuzzy
 #| msgid "Add column(s)"
 msgid "Add column"
-msgstr "Pridėti stulpelį(-ius)"
+msgstr "Pridėti stulpelį"
 
 #: tbl_structure.php:659
 msgid "At End of Table"
