--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-09 08:10+0200\n"
+"PO-Revision-Date: 2011-08-09 08:11+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1061,7 +1061,7 @@ msgstr "总计"
 #. l10n: Other, small valued, queries
 #: js/messages.php:74 server_status.php:873
 msgid "Other"
-msgstr ""
+msgstr "其它"
 
 #. l10n: Thousands separator
 #: js/messages.php:76 libraries/common.lib.php:1356
