--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-09 08:11+0200\n"
+"PO-Revision-Date: 2011-08-09 08:14+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1030,10 +1030,9 @@ msgid "Edit"
 msgstr "编辑"
 
 #: js/messages.php:66 server_status.php:667
-#, fuzzy
 #| msgid "Server Choice"
 msgid "Live traffic chart"
-msgstr "选择服务器"
+msgstr "实时流量图"
 
 #: js/messages.php:67 server_status.php:670
 msgid "Live conn./process chart"
