--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-09 08:14+0200\n"
+"PO-Revision-Date: 2011-08-09 08:18+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1039,10 +1039,9 @@ msgid "Live conn./process chart"
 msgstr "实时连接/进程图"
 
 #: js/messages.php:68 server_status.php:688
-#, fuzzy
 #| msgid "Show query chart"
 msgid "Live query chart"
-msgstr "显示查询图表"
+msgstr "实时查询图"
 
 #: js/messages.php:70
 msgid "Static data"
