--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-09 08:25+0200\n"
+"PO-Revision-Date: 2011-08-09 08:27+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1112,7 +1112,7 @@ msgstr "查询统计"
 
 #: js/messages.php:94
 msgid "System CPU Usage"
-msgstr ""
+msgstr "系统 CPU 使用"
 
 #: js/messages.php:95
 msgid "System memory"
