--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 16:05+0200\n"
-"PO-Revision-Date: 2011-08-09 08:28+0200\n"
+"PO-Revision-Date: 2011-08-09 08:36+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1239,7 +1239,7 @@ msgstr "无"
 
 #: js/messages.php:127
 msgid "Resume monitor"
-msgstr ""
+msgstr "继续监控"
 
 #: js/messages.php:128
 msgid "Pause monitor"
