--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1251,7 +1251,7 @@ msgstr "general_log 和 slow_query_log 已启用。"
 
 #: js/messages.php:131
 msgid "general_log is enabled."
-msgstr ""
+msgstr "general_log 已启用。"
 
 #: js/messages.php:132
 msgid "slow_query_log is enabled."
