--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2017,7 +2017,7 @@ msgstr "移动上传的文件时发生错误。"
 
 #: libraries/File.class.php:515
 msgid "Cannot read (moved) upload file."
-msgstr ""
+msgstr "无法读取移动后的上传文件。"
 
 #: libraries/Index.class.php:418 tbl_relation.php:526
 msgid "No index defined!"
