--- a/po/br.po
+++ b/po/br.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-09 19:07+0200\n"
+"PO-Revision-Date: 2011-08-09 19:08+0200\n"
 "Last-Translator: Fulup <fulup.jakez@ofis-bzh.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: br\n"
@@ -1125,7 +1125,7 @@ msgstr "Goulennnoù abaoe ar freskadenn ziwezhañ"
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:89
 msgid "Questions (executed statements by the server)"
-msgstr ""
+msgstr "Goulennoù (lavarennoù sevenet gant ar servijer)"
 
 #: js/messages.php:91 server_status.php:649
 msgid "Query statistics"
