--- a/po/br.po
+++ b/po/br.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-09 19:08+0200\n"
+"PO-Revision-Date: 2011-08-09 19:09+0200\n"
 "Last-Translator: Fulup <fulup.jakez@ofis-bzh.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: br\n"
@@ -1141,7 +1141,7 @@ msgstr "Memor reizhiad"
 
 #: js/messages.php:96
 msgid "System swap"
-msgstr ""
+msgstr "Takad eskemm reizhiad (swap)"
 
 #. l10n: shortcuts for Megabyte
 #: js/messages.php:97 libraries/common.lib.php:1303 server_status.php:1512
