--- a/po/br.po
+++ b/po/br.po
@@ -1155,7 +1155,7 @@ msgstr "Kio"
 
 #: js/messages.php:100
 msgid "Average load"
-msgstr ""
+msgstr "Karg keitat"
 
 #: js/messages.php:101
 #, fuzzy
