--- a/po/br.po
+++ b/po/br.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-09 19:09+0200\n"
+"PO-Revision-Date: 2011-08-09 19:10+0200\n"
 "Last-Translator: Fulup <fulup.jakez@ofis-bzh.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: br\n"
@@ -1168,7 +1168,7 @@ msgstr "Memor krubuilh"
 
 #: js/messages.php:103
 msgid "Buffered memory"
-msgstr ""
+msgstr "Memor skurzer"
 
 #: js/messages.php:104
 msgid "Free memory"
