--- a/po/br.po
+++ b/po/br.po
@@ -1189,7 +1189,7 @@ msgstr "Takad eskemm krubuilhet"
 
 #: js/messages.php:109
 msgid "Used Swap"
-msgstr ""
+msgstr "Takad eskemm implijet"
 
 #: js/messages.php:110
 msgid "Free Swap"
