--- a/po/br.po
+++ b/po/br.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-09 19:12+0200\n"
+"PO-Revision-Date: 2011-08-09 19:21+0200\n"
 "Last-Translator: Fulup <fulup.jakez@ofis-bzh.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: br\n"
@@ -1215,7 +1215,7 @@ msgstr "Goulennoù"
 
 #: js/messages.php:119 server_status.php:949
 msgid "Traffic"
-msgstr ""
+msgstr "Tremenerezh"
 
 #: js/messages.php:120 libraries/server_links.inc.php:73
 #: server_status.php:1396
