--- a/po/br.po
+++ b/po/br.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-09 19:23+0200\n"
+"PO-Revision-Date: 2011-08-09 19:24+0200\n"
 "Last-Translator: Fulup <fulup.jakez@ofis-bzh.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: br\n"
@@ -1252,7 +1252,7 @@ msgstr "Adkregiñ gant an evezhiañ"
 
 #: js/messages.php:128
 msgid "Pause monitor"
-msgstr ""
+msgstr "Paouez gant an evezhiañ"
 
 #: js/messages.php:130
 msgid "general_log and slow_query_log are enabled."
