Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 04:27+0200\n"
+"PO-Revision-Date: 2011-08-10 04:28+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -568,10 +568,9 @@ msgid "Words are separated by a space character (\" \")."
 msgstr "每个单词用空格 (“ ”) 分隔。"
 
 #: db_search.php:292
-#, fuzzy
 #| msgid "Inside table(s):"
 msgid "Inside tables:"
-msgstr "于以下表："
+msgstr "于下列表:"
 
 #: db_search.php:322
 msgid "Inside column:"
