--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 04:35+0200\n"
+"PO-Revision-Date: 2011-08-10 04:36+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -10870,10 +10870,9 @@ msgid "Add unique index"
 msgstr "添加唯一键"
 
 #: tbl_structure.php:174 tbl_structure.php:175
-#, fuzzy
 #| msgid "Add index"
 msgid "Add SPATIAL index"
-msgstr "添加索引"
+msgstr "添加空间索引"
 
 #: tbl_structure.php:176 tbl_structure.php:177
 msgid "Add FULLTEXT index"
