--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 07:22+0200\n"
+"PO-Revision-Date: 2011-08-10 07:23+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -10510,7 +10510,7 @@ msgstr "图表标题"
 
 #: tbl_chart.php:100
 msgid "X-Axis:"
-msgstr ""
+msgstr "横坐标:"
 
 #: tbl_chart.php:114
 #, fuzzy
