Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 07:24+0200\n"
+"PO-Revision-Date: 2011-08-10 07:25+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -10523,10 +10523,9 @@ msgid "The remaining columns"
 msgstr "其余字段"
 
 #: tbl_chart.php:129
-#, fuzzy
 #| msgid "X Axis label"
 msgid "X-Axis label:"
-msgstr "水平轴标签"
+msgstr "横坐标名称:"
 
 #: tbl_chart.php:130
 #, fuzzy
