--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 07:25+0200\n"
+"PO-Revision-Date: 2011-08-10 07:26+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -10538,10 +10538,9 @@ msgid "Y-Axis label:"
 msgstr "纵坐标名称:"
 
 #: tbl_chart.php:131
-#, fuzzy
 #| msgid "Value"
 msgid "Y Values"
-msgstr "值"
+msgstr "纵值"
 
 #: tbl_create.php:30
 #, php-format
