--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -10580,10 +10580,9 @@ msgid "-- None --"
 msgstr "-- 无 --"
 
 #: tbl_gis_visualization.php:180
-#, fuzzy
 #| msgid "Log file count"
 msgid "Spatial column"
-msgstr "日志文件总数"
+msgstr "空间字段"
 
 #: tbl_gis_visualization.php:201
 msgid "Use OpenStreetMaps as Base Layer"
