--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 07:43+0200\n"
+"PO-Revision-Date: 2011-08-10 07:44+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -10075,7 +10075,7 @@ msgstr "目标数据库将完全根据源数据库同步。源数据库将保持
 
 #: server_variables.php:58
 msgid "Setting variable failed"
-msgstr ""
+msgstr "设置变量失败"
 
 #: server_variables.php:77
 msgid "Server variables and settings"
