--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 07:45+0200\n"
+"PO-Revision-Date: 2011-08-10 07:46+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -9763,7 +9763,7 @@ msgstr "说明/设置"
 
 #: server_status.php:1404
 msgid "Done rearranging/editing charts"
-msgstr ""
+msgstr "完成排列/编辑图表"
 
 #: server_status.php:1411
 #, fuzzy
