--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 07:46+0200\n"
+"PO-Revision-Date: 2011-08-10 07:47+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -9779,10 +9779,9 @@ msgid "Refresh rate"
 msgstr "刷新频率"
 
 #: server_status.php:1419
-#, fuzzy
 #| msgid "Textarea columns"
 msgid "Chart columns"
-msgstr "文本框列"
+msgstr "每行图表个数"
 
 #: server_status.php:1435
 #, fuzzy
