--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 07:54+0200\n"
+"PO-Revision-Date: 2011-08-10 07:56+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -9845,10 +9845,9 @@ msgid ""
 msgstr ""
 
 #: server_status.php:1475
-#, fuzzy
 #| msgid "Usage"
 msgid "CPU Usage"
-msgstr "已用"
+msgstr "CPU 使用"
 
 #: server_status.php:1478
 #, fuzzy
