--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 07:56+0200\n"
+"PO-Revision-Date: 2011-08-10 07:59+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -9860,10 +9860,9 @@ msgid "Swap Usage"
 msgstr "交换空间使用"
 
 #: server_status.php:1484
-#, fuzzy
 #| msgid "See slave status table"
 msgid "Status variable(s)"
-msgstr "查看从服务器状态"
+msgstr "状态变量"
 
 #: server_status.php:1486
 #, fuzzy
