--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 07:59+0200\n"
+"PO-Revision-Date: 2011-08-10 08:00+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -9865,10 +9865,9 @@ msgid "Status variable(s)"
 msgstr "状态变量"
 
 #: server_status.php:1486
-#, fuzzy
 #| msgid "Select Tables"
 msgid "Select series:"
-msgstr "选择表"
+msgstr "选择系列:"
 
 #: server_status.php:1488
 msgid "Commonly monitored"
