--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9884,7 +9884,7 @@ msgstr "独立显示"
 
 #: server_status.php:1509
 msgid "Apply a divisor"
-msgstr ""
+msgstr "应用除数"
 
 #: server_status.php:1516
 msgid "Append unit to data values"
