Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 08:09+0200\n"
+"PO-Revision-Date: 2011-08-10 08:10+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -9888,7 +9888,7 @@ msgstr "应用除数"
 
 #: server_status.php:1516
 msgid "Append unit to data values"
-msgstr ""
+msgstr "在值后附加单位"
 
 #: server_status.php:1522
 #, fuzzy
