--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9897,7 +9897,7 @@ msgstr "添加该数据"
 
 #: server_status.php:1524
 msgid "Clear series"
-msgstr ""
+msgstr "清除所有数据"
 
 #: server_status.php:1527
 #, fuzzy
