--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9941,11 +9941,11 @@ msgid_plural "%d seconds"
 msgstr[0] "%d 秒"
 
 #: server_status.php:1595
-#, fuzzy, php-format
+#, php-format
 #| msgid "Minute"
 msgid "%d minute"
 msgid_plural "%d minutes"
-msgstr[0] "分"
+msgstr[0] "%d 分"
 
 #: server_synchronize.php:92
 msgid "Could not connect to the source"
